Все что после лишнего enter добавил

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,62 @@
     <string name="input_fields">Введите данные</string>
     <string name="name">Имя</string>
     <string name="age">Возраст</string>
-    <string name="gender">Пол</string>
+    <string name="gender">Пол: </string>
     <string name="height">Рост</string>
     <string name="he">Муж</string>
     <string name="she">Жен</string>
+
+    <string name="slogan">Здоровье - это ваше богатство. Следите за ним вместе с нами.</string>
+    <string name="pressure">Давление</string>
+    <string name="next">Далее</string>
+    <string name="thank">Мы рады, что вы выбрали нас</string>
+    <string name="input_quetion">За чем бы вы хотели следить?</string>
+    <string name="go">Поехали!</string>
+    <string name="nearest_act">Ближайшее действие</string>
+    <string name="_day">день</string>
+    <string name="_week">неделя</string>
+    <string name="_month">месяц</string>
+    <string name="steps">Шаги</string>
+    <string name="sleep">Сон</string>
+    <string name="cardio">Кардио</string>
+    <string name="weight">Вес</string>
+    <string name="preparations">Лекарства</string>
+    <string name="healthy_eat">Здоровое питание</string>
+    <string name="of_steps">шагов</string>
+    <string name="kg">кг</string>
+    <string name="total_steps">шагов всего</string>
+    <string name="week">Неделя</string>
+    <string name="month">Месяц</string>
+    <string name="select_target">Выберите цель</string>
+    <string name="input_target">Введите свою цель</string>
+    <string name="calories_burned">Сожжено калорий</string>
+    <string name="calories">калорий</string>
+    <string name="per_day">За день</string>
+    <string name="per_week">За неделю</string>
+    <string name="per_month">За месяц</string>
+    <string name="total_sleeptime">Общее время сна</string>
+    <string name="measurements">Измерения</string>
+    <string name="input_pressure">Введите ваше давление</string>
+    <string name="up_pressure">верх</string>
+    <string name="down_pressure">нижн</string>
+    <string name="input_pulse">Введите ваш пульс</string>
+    <string name="beats_per_minute">уд в мин</string>
+    <string name="comp_with_norm">Ваши показатели в сравнении нормой</string>
+    <string name="yours">ваши</string>
+    <string name="norm">норма</string>
+    <string name="average_kg">кг среднее</string>
+    <string name="add">Добавить</string>
+    <string name="eating">Питание</string>
+    <string name="profile">Профиль</string>
+    <string name="settings">Настройки</string>
+    <string name="taking_pills">Принятие таблеток</string>
+    <string name="pills">Таблетки</string>
+    <string name="title">Название</string>
+    <string name="reminders">Напоминания</string>
+    <string name="first_rem">1 прием</string>
+    <string name="second_rem">2 прием</string>
+    <string name="third_rem">3 прием</string>
+    <string name="fourth_rem">4 прием</string>
+    <string name="save">Сохранить</string>
     
 </resources>
