--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,9 +59,13 @@
     <string name="third_rem">3 прием</string>
     <string name="fourth_rem">4 прием</string>
     <string name="save">Сохранить</string>
-
     <string name="how_long_sleep">Сколько длился ваш сон</string>
     <string name="start_sleep">Начало сна</string>
     <string name="wakeup">Пробуждение</string>
+
+    <string name="input_steps">Введите количество шагов за сегодня</string>
+    <string name="steps5000">5000 шагов</string>
+    <string name="steps10000">10000 шагов</string>
+    <string name="steps15000">15000 шагов</string>
     
 </resources>
