Сверстал medicines_item.xml для будущего recyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="shin_girth">Обхват голени</string>
     <string name="fat_content">Содержание жира</string>
     <string name="index_mass_body">Индекс массы тела</string>
-    
+    <string name="addMedicines">Добавьте препарат</string>
     <string name="articles">Статьи о улучшении качества вашего питания</string>
 
 </resources>
