Вес+штучки для веса

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="comp_with_norm">Ваши показатели в сравнении нормой</string>
     <string name="yours">ваши</string>
     <string name="norm">норма</string>
-    <string name="average_kg">кг среднее</string>
+    <string name="average">среднее</string>
     <string name="add">Добавить</string>
     <string name="eating">Питание</string>
     <string name="profile">Профиль</string>
