Реализовал бд, сверстал страницу для добавления таблеток, добавил строковые ресурсы связанные с экраном, адаптировал темную тему

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,7 @@
     <string name="index_mass_body">Индекс массы тела</string>
     <string name="addMedicines">Добавьте препарат</string>
     <string name="articles">Статьи о улучшении качества вашего питания</string>
+    <string name="duraction_of_course">Длительность курса</string>
+    <string name="input_count_of_days">Введите количество дней</string>
 
 </resources>
