--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,7 @@
     <string name="articles">Статьи о улучшении качества вашего питания</string>
     <string name="duraction_of_course">Длительность курса</string>
     <string name="input_count_of_days">Введите количество дней</string>
-
+    <string name="skip">Пропустить</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
