Сделал восстановление уведомлений после перезагрузки телефона, начал верстать editMedicinesFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="tab_60">60</string>
     <string name="tab_80">80</string>
     <string name="tab_120">120</string>
+    <string name="finish_course">Закончить курс</string>
 </resources>
