И так, за 2 дня я сделал: поправил уведомления, сделал новую иконку с увеличенным фоном, добавил иконку для уведомлений, изменил иконку для шагов, внес поправки в экран с редактированием, внес некоторые поправки в бд с таблетками

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,6 @@
     <string name="begin">Начало</string>
     <string name="course_progress">Прогресс курса</string>
     <string name="course_miss_total">Пропусков всего</string>
+    <string name="save_edit">Сохранить изменения</string>
+    <string name="edit">Редактировать</string>
 </resources>
