--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,12 +52,13 @@
     <string name="settings">Настройки</string>
     <string name="taking_pills">Принятие таблеток</string>
     <string name="pills">Таблетки</string>
+    <string name="title_of_pills">Введите название таблетки</string>
     <string name="title">Название</string>
     <string name="reminders">Напоминания</string>
-    <string name="first_rem">1 прием</string>
-    <string name="second_rem">2 прием</string>
-    <string name="third_rem">3 прием</string>
-    <string name="fourth_rem">4 прием</string>
+    <string name="first_rem">Первый приём</string>
+    <string name="second_rem">Второй приём</string>
+    <string name="third_rem">Третий приём</string>
+    <string name="fourth_rem">Четвёртый приём</string>
     <string name="save">Сохранить</string>
     <string name="how_long_sleep">Сколько длился ваш сон</string>
     <string name="start_sleep">Начало сна</string>
