Сделал редизайн главного экрана, добавил useCase ы для Heart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="preparations">Лекарства</string>
     <string name="healthy_eat">Здоровое питание</string>
     <string name="of_steps">шагов</string>
+    <string name="average_steps">шагов среднее</string>
     <string name="kg">кг</string>
     <string name="total_steps">шагов всего</string>
     <string name="week">Неделя</string>
