Добавил на каждой странице историю, переделал базу данных для шагов(теперь возвращаемый тип каждого запроса Flow<...>)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,8 @@
     <string name="ChooseTimeAndDate">Введите дату и время</string>
     <string name="emptyString">Пустое поле</string>
     <string name="wrongValue">Неверное значение</string>
+    <string name="editHistory">Редактирование записи</string>
+    <string name="historyUpdated">Запись обновлена</string>
+    <string name="oldValue">Предыдущее значение - </string>
+    <string name="inputNewValue">Введите новое значение</string>
 </resources>
