Добавил подтверждение при удалении таблеток

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,7 @@
     <string name="historyUpdated">Запись обновлена</string>
     <string name="oldValue">Предыдущее значение - </string>
     <string name="inputNewValue">Введите новое значение</string>
+    <string name="deliting">Удаление</string>
+    <string name="areUSure">Вы действительно хотитие удалить запись?</string>
+    <string name="yes">Да</string>
 </resources>
